--- a/src/config/mediator-config.json
+++ b/src/config/mediator-config.json
@@ -1,8 +1,8 @@
 {
     "urn": "urn:mediator:odkcentral",
     "version": "1.0.0",
-    "name": "ODK Central Mediatorr",
-    "description": "This mediator is intended for retrieving submission data from ODK Central, and storing the data into the MySQL Repository.",
+    "name": "ODK Central Staging <=> Open Mediatorr",
+    "description": "This mediator is intended for retrieving submission data from ODK Central Staging Database, and sends to openmrs.",
     "defaultChannelConfig": [
         {
             "name": "ODK Central Mediator",
